# ttsky-asic-rayforge

./: .gitignore  DEPS.yml  README.md  doc-connections.md  doc-pipeline.md  doc-raytracer-project-plan.md  info.yaml  pipeline.md  primitives.v  raycaster.c  raytracer-project-plan.md  raytracer.c
.cogni/: output_toolu_018m3VnGdQUXLdmzebTEfgSM.txt  output_toolu_01FXiMZLtKes4xoVhHkXCiws.txt  output_toolu_01MHrwfrUY1o88srCTBfdQjs.txt  output_toolu_01U1rFbyx47X8NDgGmSWKrh1.txt
c-implementation/: CMakeLists.txt  build.bat  debug_pixels.cpp  fixed_point.h  main.cpp  ray_sphere.h  raytracer.h  scene.h  vec3.h
cordic/: DEPS.yml  _write_tb.py  rotation.sv  scaling.sv  tb_rotation.sv  tb_scaling.sv  tb_vector_normalization.sv  tb_vectoring.sv  vector_normalization.sv  vectoring.sv
docs/: info.md
implementation/: primitives.v  ray-sphere-intersect.sv  raytracer-top.sv  scene-lut.svh  scene-streamer.sv  uartReceiver.sv  uartTransceiver.sv  uartTransmitter.sv
proper-implementation/: README.md  raytracer_pipeline.sv.wip  raytracer_simple.sv  raytracer_simple.sv.old  scene_lut.sv  tb_q16_basic.sv  test-q16.bat  test-q16.sh  uartSceneReceiver.sv
proper-implementation-no-uart/: README.md  ray_sphere_intersect.sv  scene_lut.sv  vec3_q16.sv  vga_raytracer_wrapper.sv
raygaming-sphere-test/: tt_um_vga_raytracer.sv
raygaming-test/: tinytapeout_vga.v
raygaming-text-test/: backgroundGenerator.v  timerCore.v
src/: asic.sv  asic.v  config.json  fontROM.v  primitives.v  raytracer-top.sv  scene_lut.sv  tt_um_asic.sv  tt_um_asic.v
test/: Makefile  tb.v
tools/: scene-compiler.py  (+1 more)
(+192 files in other folders)
